Add LayerBEE mascot images and update color theme
- Added 3D printed mascot photos (Gideon, David, Calvert School)
- Updated color theme to match bee yellow/black from actual prints
- Updated hero to show real 3D printed mascot
- Updated logo to use mascot image

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="site-header">
         <div class="header-content">
             <a href="index.html" class="logo">
-                <span class="logo-icon" aria-hidden="true">🐝</span>
+                <img src="mascot/LayerBEE.jpg" alt="" class="logo-img" aria-hidden="true">
                 <span class="logo-text">LayerBEE</span>
             </a>
             <button class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false">
@@ -67,18 +67,8 @@
                     <strong>No downloads.</strong> No accounts. Your progress saves in your browser.
                 </p>
             </div>
-            <div class="hero-visual" aria-hidden="true">
-                <div class="print-animation">
-                    <div class="print-bed"></div>
-                    <div class="print-object">
-                        <div class="layer"></div>
-                        <div class="layer"></div>
-                        <div class="layer"></div>
-                        <div class="layer"></div>
-                        <div class="layer"></div>
-                    </div>
-                    <div class="nozzle"></div>
-                </div>
+            <div class="hero-visual">
+                <img src="mascot/LayBEE-gideon.jpg" alt="3D printed LayerBEE mascot on an Ender printer with personalized name plate" class="hero-mascot-img">
             </div>
         </section>
 
@@ -269,7 +259,8 @@
     <!-- AI Tutor Chat Panel -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <h2>🐝 LayerBEE</h2>
+            <img src="mascot/LayerBEE.jpg" alt="" class="tutor-logo-img">
+            <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
                 <span class="status-text">Loading...</span>
