Add combined hero image and Ask LayerBEE logos
- Hero now shows both Gideon and David's personalized 3D printed bees
- Created Ask LayerBEE banner logo (400x120)
- Created Ask LayerBEE badge logo (200x200) for FAB buttons
- Updated index.html to use new combined hero image

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="hero-visual">
-                <img src="mascot/LayBEE-gideon.jpg" alt="3D printed LayerBEE mascot on an Ender printer with personalized name plate" class="hero-mascot-img">
+                <img src="mascot/hero-gideon-david.jpg" alt="3D printed LayerBEE mascots - Gideon and David's personalized bees on Ender printers" class="hero-mascot-img">
             </div>
         </section>
 
