Improve font visibility in light/dark themes and update hero image
- Add explicit text colors for form inputs, selects, and labels
- Create dedicated link color variables for better contrast
- Fix inline code visibility with borders and proper colors
- Ensure mode buttons and help cards have proper text colors
- Fix skip link contrast (black on yellow instead of white)
- Update placeholder text colors for tutor input
- Add chat message code styling for both themes
- Switch hero image to LayerBEE-gideon-david.png

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="hero-visual">
-                <img src="mascot/hero-gideon-david.jpg" alt="3D printed LayerBEE mascots - Gideon and David's personalized bees on Ender printers" class="hero-mascot-img">
+                <img src="mascot/LayerBEE-gideon-david.png" alt="3D printed LayerBEE mascots - Gideon and David's personalized bees on Ender printers" class="hero-mascot-img">
             </div>
         </section>
 
