Add BEADS issue tracking and 3D printed bee logo
- Initialize BEADS for project task management
- Create circular logo from David's 3D printed bee photo
- Replace Calvert School bee with 3D printed mascot in header/tutor

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="site-header">
         <div class="header-content">
             <a href="index.html" class="logo">
-                <img src="mascot/LayerBEE.jpg" alt="" class="logo-img" aria-hidden="true">
+                <img src="mascot/layerbee-circle-logo.png" alt="" class="logo-img" aria-hidden="true">
                 <span class="logo-text">LayerBEE</span>
             </a>
             <button class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false">
@@ -259,7 +259,7 @@
     <!-- AI Tutor Chat Panel -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <img src="mascot/LayerBEE.jpg" alt="" class="tutor-logo-img">
+            <img src="mascot/layerbee-circle-logo.png" alt="" class="tutor-logo-img">
             <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
