Update branding with 3D printed bee mascot images
- Add favicon from circle logo (16x16, 32x32, .ico)
- Update hero to LayerBEE-hero-image.png with GIDEON & DAVID
- All images now use the actual 3D printed bee mascot

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn 3D printing with LayerBEE - your AI-powered tutor. Free, fun, and runs 100% in your browser!">
     <title>LayerBEE - 3D Printing Tutor for Young Makers</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐝</text></svg>">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="mascot/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="mascot/favicon-16.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +70,7 @@
                 </p>
             </div>
             <div class="hero-visual">
-                <img src="mascot/LayerBEE-gideon-david.png" alt="3D printed LayerBEE mascots - Gideon and David's personalized bees on Ender printers" class="hero-mascot-img">
+                <img src="mascot/LayerBEE-hero-image.png" alt="LayerBEE 3D Printing - Gideon and David's personalized prints on Ender printer" class="hero-mascot-img">
             </div>
         </section>
 
