Replace bee emojis with proper LayerBEE logo and clean up hero section
- Replace all bee emojis (🐝) with LayerBEE chatbot logo images
- Add properly sized icon CSS (.badge-icon 22px, .btn-icon-img 28px)
- Clean up hero section: simplified grid, removed shadows/hovers
- Add scroll-margin-top for smooth anchor scrolling with sticky header
- Reorganize images: move to images/, create other-images/ for extras
- Remove old mascot folder, consolidate assets

w4ester & ai orchestration

--- a/modules/advanced.html
+++ b/modules/advanced.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Advanced 3D printing techniques - multi-color, speed tuning, and post-processing with LayerBEE">
     <title>Module 4: Level Up - LayerBEE</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="../mascot/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../mascot/favicon-16.png">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
     <header class="site-header">
         <div class="header-content">
             <a href="../index.html" class="logo">
-                <img src="../mascot/layerbee-circle-logo.png" alt="" class="logo-img" aria-hidden="true">
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="logo-img" aria-hidden="true">
                 <span class="logo-text">LayerBEE</span>
             </a>
             <nav aria-label="Main navigation">
