--- a/modules/basics.html
+++ b/modules/basics.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Printing Basics | LayerBEE</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="../mascot/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../mascot/favicon-16.png">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
     <header class="site-header">
         <div class="header-content">
             <a href="../index.html" class="logo">
-                <img src="../mascot/layerbee-circle-logo.png" alt="" class="logo-img" aria-hidden="true">
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="logo-img" aria-hidden="true">
                 <span class="logo-text">LayerBEE</span>
             </a>
             <nav aria-label="Main navigation">
