--- a/modules/workflow.html
+++ b/modules/workflow.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn the complete 3D printing workflow - from design to finished print with LayerBEE">
     <title>Module 2: The Print Workflow - LayerBEE</title>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="../mascot/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../mascot/favicon-16.png">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
     <header class="site-header">
         <div class="header-content">
             <a href="../index.html" class="logo">
-                <img src="../mascot/layerbee-circle-logo.png" alt="" class="logo-img" aria-hidden="true">
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="logo-img" aria-hidden="true">
                 <span class="logo-text">LayerBEE</span>
             </a>
             <nav aria-label="Main navigation">
