Remove bee emoji from footer text
w4ester & ai orchestration

--- a/modules/shop.html
+++ b/modules/shop.html
@@ -134,7 +134,7 @@
     </button>
 
     <footer class="site-footer">
-        <p>Built for young makers with the <strong>Producer Mindset</strong> 🐝</p>
+        <p>Built for young makers with the <strong>Producer Mindset</strong></p>
     </footer>
 
     <script src="../js/app.js"></script>
