--- a/modules/basics.html
+++ b/modules/basics.html
@@ -505,7 +505,7 @@
     </button>
 
     <footer class="site-footer">
-        <p>Built for young makers with the <strong>Producer Mindset</strong> 🐝</p>
+        <p>Built for young makers with the <strong>Producer Mindset</strong></p>
     </footer>
 
     <script src="../js/app.js"></script>
