Add tutor panel to all module pages
Previously only basics.html and shop.html had the tutor chat panel.
Now all module pages (workflow, troubleshoot, advanced, business)
include the tutor panel HTML and required scripts.

w4ester & ai orchestration

--- a/modules/business.html
+++ b/modules/business.html
@@ -637,7 +637,46 @@
         </section>
     </main>
 
-    <!-- Floating Tutor Button -->
+    <!-- Tutor Panel -->
+    <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
+        <div class="tutor-header">
+            <h2>🐝 LayerBEE</h2>
+            <div class="tutor-status" id="tutor-status">
+                <span class="status-dot"></span>
+                <span class="status-text">Loading...</span>
+            </div>
+            <button id="close-tutor" class="tutor-close" aria-label="Close tutor">×</button>
+        </div>
+        <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
+            <div class="message bot-message">
+                <span class="message-avatar">🐝</span>
+                <div class="message-content">
+                    <p><strong>Ready to start selling?</strong></p>
+                    <p>Ask me about pricing, marketing, or running your print shop!</p>
+                </div>
+            </div>
+        </div>
+        <div class="tutor-mode-selector">
+            <button class="mode-btn" data-mode="learn">📚 Learn</button>
+            <button class="mode-btn" data-mode="troubleshoot">🔧 Fix</button>
+            <button class="mode-btn" data-mode="quiz">❓ Quiz</button>
+        </div>
+        <div class="tutor-input-area">
+            <div id="model-loading" class="model-loading">
+                <div class="loading-spinner"></div>
+                <span id="loading-text">Initializing LayerBEE...</span>
+                <div class="loading-progress">
+                    <div class="loading-bar" id="loading-bar"></div>
+                </div>
+            </div>
+            <form id="tutor-form" class="tutor-form">
+                <label for="tutor-input" class="visually-hidden">Ask a question</label>
+                <input type="text" id="tutor-input" placeholder="Ask about running a print shop..." autocomplete="off" disabled>
+                <button type="submit" id="tutor-submit" disabled aria-label="Send">→</button>
+            </form>
+        </div>
+    </div>
+
     <button id="tutor-fab" class="tutor-fab" aria-label="Open LayerBEE tutor">
         <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="fab-icon-img" aria-hidden="true">
         <span class="fab-text">Ask LayerBEE</span>
@@ -649,5 +688,7 @@
     </footer>
 
     <script src="../js/app.js"></script>
+    <script src="../js/tutor-flow.js"></script>
+    <script src="../js/tutor-ui.js"></script>
 </body>
 </html>
