--- a/modules/troubleshoot.html
+++ b/modules/troubleshoot.html
@@ -652,7 +652,46 @@
         </section>
     </main>
 
-    <!-- Floating Tutor Button -->
+    <!-- Tutor Panel -->
+    <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
+        <div class="tutor-header">
+            <h2>🐝 LayerBEE</h2>
+            <div class="tutor-status" id="tutor-status">
+                <span class="status-dot"></span>
+                <span class="status-text">Loading...</span>
+            </div>
+            <button id="close-tutor" class="tutor-close" aria-label="Close tutor">×</button>
+        </div>
+        <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
+            <div class="message bot-message">
+                <span class="message-avatar">🐝</span>
+                <div class="message-content">
+                    <p><strong>Having print problems?</strong></p>
+                    <p>Tell me what's going wrong and I'll help you fix it!</p>
+                </div>
+            </div>
+        </div>
+        <div class="tutor-mode-selector">
+            <button class="mode-btn" data-mode="learn">📚 Learn</button>
+            <button class="mode-btn active" data-mode="troubleshoot">🔧 Fix</button>
+            <button class="mode-btn" data-mode="quiz">❓ Quiz</button>
+        </div>
+        <div class="tutor-input-area">
+            <div id="model-loading" class="model-loading">
+                <div class="loading-spinner"></div>
+                <span id="loading-text">Initializing LayerBEE...</span>
+                <div class="loading-progress">
+                    <div class="loading-bar" id="loading-bar"></div>
+                </div>
+            </div>
+            <form id="tutor-form" class="tutor-form">
+                <label for="tutor-input" class="visually-hidden">Ask a question</label>
+                <input type="text" id="tutor-input" placeholder="Describe your print problem..." autocomplete="off" disabled>
+                <button type="submit" id="tutor-submit" disabled aria-label="Send">→</button>
+            </form>
+        </div>
+    </div>
+
     <button id="tutor-fab" class="tutor-fab" aria-label="Open LayerBEE tutor">
         <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="fab-icon-img" aria-hidden="true">
         <span class="fab-text">Ask LayerBEE</span>
@@ -664,5 +703,7 @@
     </footer>
 
     <script src="../js/app.js"></script>
+    <script src="../js/tutor-flow.js"></script>
+    <script src="../js/tutor-ui.js"></script>
 </body>
 </html>
