Add Business mode button to all module tutor panels
Match the home page tutor panel which has 4 mode buttons
(Learn, Fix, Quiz, Business). All module pages now have
consistent UI with all 4 modes available.

- troubleshoot.html: Fix mode active by default
- business.html: Business mode active by default
- All other pages: Learn mode active by default

w4ester & ai orchestration

--- a/modules/basics.html
+++ b/modules/basics.html
@@ -482,6 +482,7 @@
             <button class="mode-btn active" data-mode="learn">📚 Learn</button>
             <button class="mode-btn" data-mode="troubleshoot">🔧 Fix</button>
             <button class="mode-btn" data-mode="quiz">❓ Quiz</button>
+            <button class="mode-btn" data-mode="business">💼 Business</button>
         </div>
         <div class="tutor-input-area">
             <div id="model-loading" class="model-loading">
