Add headphone hook product images and complete shop image updates
- Add 5 headphone hook images (black, gray, white, green, rainbow)
- Update hasImages arrays in shop-data.js for all products
- Replace bee emoji with LayerBEE logo in tutor panels across all pages

w4ester & ai orchestration

--- a/modules/basics.html
+++ b/modules/basics.html
@@ -462,7 +462,8 @@
     <!-- Tutor Panel (same as index) -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <h2>🐝 LayerBEE</h2>
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
                 <span class="status-text">Loading...</span>
@@ -471,7 +472,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <span class="message-avatar">🐝</span>
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
                 <div class="message-content">
                     <p><strong>Hi! I'm here to help with this module!</strong></p>
                     <p>Ask me anything about 3D printing basics.</p>
