--- a/modules/business.html
+++ b/modules/business.html
@@ -640,7 +640,8 @@
     <!-- Tutor Panel -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <h2>🐝 LayerBEE</h2>
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
                 <span class="status-text">Loading...</span>
@@ -649,7 +650,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <span class="message-avatar">🐝</span>
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
                 <div class="message-content">
                     <p><strong>Ready to start selling?</strong></p>
                     <p>Ask me about pricing, marketing, or running your print shop!</p>
