--- a/modules/shop.html
+++ b/modules/shop.html
@@ -91,7 +91,8 @@
     <!-- Tutor Panel (same as other pages) -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <h2>🐝 LayerBEE</h2>
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
                 <span class="status-text">Loading...</span>
@@ -100,7 +101,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <span class="message-avatar">🐝</span>
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
                 <div class="message-content">
                     <p><strong>Welcome to the Print Shop!</strong></p>
                     <p>Need help choosing a product? Ask me anything!</p>
