--- a/modules/troubleshoot.html
+++ b/modules/troubleshoot.html
@@ -655,7 +655,8 @@
     <!-- Tutor Panel -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <h2>🐝 LayerBEE</h2>
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
                 <span class="status-text">Loading...</span>
@@ -664,7 +665,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <span class="message-avatar">🐝</span>
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
                 <div class="message-content">
                     <p><strong>Having print problems?</strong></p>
                     <p>Tell me what's going wrong and I'll help you fix it!</p>
