Add content moderation filter for kid-safe platform
- Create js/content-filter.js with profanity, weapon, and inappropriate content detection
- Integrate filter into LayerBEE chatbot (tutor-ui.js)
- Add content-filter.js script to all 7 HTML pages
- Blocked messages show friendly redirect to appropriate topics
- Base64-encoded profanity list keeps source code clean

APIs for future use:
- ContentFilter.validateShopInput(text, type)
- ContentFilter.validateChatMessage(message)
- ContentFilter.validateFileName(filename)

w4ester & ai orchestration

--- a/modules/basics.html
+++ b/modules/basics.html
@@ -511,6 +511,7 @@
     </footer>
 
     <script src="../js/app.js"></script>
+    <script src="../js/content-filter.js"></script>
     <script src="../js/tutor-flow.js"></script>
     <script src="../js/tutor-ui.js"></script>
     <script src="../js/module.js"></script>
