--- a/modules/workflow.html
+++ b/modules/workflow.html
@@ -610,6 +610,7 @@
     </footer>
 
     <script src="../js/app.js"></script>
+    <script src="../js/content-filter.js"></script>
     <script src="../js/tutor-flow.js"></script>
     <script src="../js/tutor-ui.js"></script>
 </body>
