--- a/modules/shop.html
+++ b/modules/shop.html
@@ -142,6 +142,7 @@
     <script src="../js/app.js"></script>
     <script src="../js/shop-data.js"></script>
     <script src="../js/shop.js"></script>
+    <script src="../js/content-filter.js"></script>
     <script src="../js/tutor-flow.js"></script>
     <script src="../js/tutor-ui.js"></script>
 </body>
