Fix accessibility and SEO issues from frontend audit
- Add visible focus indicators to inputs (box-shadow) for keyboard users
- Add meta descriptions to shop.html and basics.html
- Add aria-hidden to decorative tutor panel images
- Add button size system and consistent card styling
- Make Ask LayerBEE FAB button smaller and more professional
- Include frontend audit report documenting findings

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     level up their 3D printing skills. 100% free, runs in your browser!
                 </p>
                 <div class="hero-cta">
-                    <a href="#modules" class="btn btn-primary">Start Learning</a>
+                    <a href="#modules" class="btn btn-primary btn-lg">Start Learning</a>
                     <button id="open-tutor" class="btn btn-secondary">
                         <img src="images/LayerBEE-chatbot-logo.png" alt="" class="btn-icon-img" aria-hidden="true"> Ask LayerBEE
                     </button>
@@ -259,7 +259,7 @@
     <!-- AI Tutor Chat Panel -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <img src="images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <img src="images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img" aria-hidden="true">
             <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
@@ -270,7 +270,7 @@
 
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <img src="images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
+                <img src="images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img" aria-hidden="true">
                 <div class="message-content">
                     <p><strong>Bzz! I'm LayerBEE, your 3D printing buddy!</strong></p>
                     <p>I run entirely in your browser - no data sent anywhere!</p>
