--- a/modules/basics.html
+++ b/modules/basics.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn 3D printing basics with LayerBEE. Understand how FDM printers work, filament types, and get your first successful print.">
     <title>3D Printing Basics | LayerBEE</title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32.png">
@@ -462,7 +463,7 @@
     <!-- Tutor Panel (same as index) -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img" aria-hidden="true">
             <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
@@ -472,7 +473,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img" aria-hidden="true">
                 <div class="message-content">
                     <p><strong>Hi! I'm here to help with this module!</strong></p>
                     <p>Ask me anything about 3D printing basics.</p>
