--- a/modules/advanced.html
+++ b/modules/advanced.html
@@ -558,7 +558,7 @@
     <!-- Tutor Panel -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img" aria-hidden="true">
             <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
@@ -568,7 +568,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img" aria-hidden="true">
                 <div class="message-content">
                     <p><strong>Ready to level up?</strong></p>
                     <p>Ask me about advanced techniques, speed tuning, or multi-color printing!</p>
