--- a/modules/business.html
+++ b/modules/business.html
@@ -640,7 +640,7 @@
     <!-- Tutor Panel -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img" aria-hidden="true">
             <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
@@ -650,7 +650,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img" aria-hidden="true">
                 <div class="message-content">
                     <p><strong>Ready to start selling?</strong></p>
                     <p>Ask me about pricing, marketing, or running your print shop!</p>
