--- a/modules/shop.html
+++ b/modules/shop.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Browse and order 3D printed products from LayerBEE. Pick colors, add to cart, and submit for parent review.">
     <title>Print Shop | LayerBEE</title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32.png">
@@ -91,7 +92,7 @@
     <!-- Tutor Panel (same as other pages) -->
     <div id="tutor-panel" class="tutor-panel" aria-hidden="true">
         <div class="tutor-header">
-            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img">
+            <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="tutor-logo-img" aria-hidden="true">
             <h2>LayerBEE</h2>
             <div class="tutor-status" id="tutor-status">
                 <span class="status-dot"></span>
@@ -101,7 +102,7 @@
         </div>
         <div class="tutor-messages" id="tutor-messages" role="log" aria-live="polite">
             <div class="message bot-message">
-                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img">
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="message-avatar-img" aria-hidden="true">
                 <div class="message-content">
                     <p><strong>Welcome to the Print Shop!</strong></p>
                     <p>Need help choosing a product? Ask me anything!</p>
