Replace bee emoji with logo image throughout codebase
- Add .inline-bee CSS class for inline logo display
- Replace 🐝 in console logs with [LayerBEE] text prefix
- Replace 🐝 in chatbot responses with plain text
- Replace 🐝 in basics.html with inline logo images
- Remove emoji from system prompts and error messages

w4ester & ai orchestration

--- a/modules/basics.html
+++ b/modules/basics.html
@@ -55,7 +55,7 @@
             <h2>What is 3D Printing?</h2>
 
             <div class="info-box">
-                <strong>🐝 Fun Fact:</strong> 3D printing was invented in 1984 - that's probably before your parents were born!
+                <strong><img src="../images/LayerBEE-chatbot-logo.png" alt="LayerBEE" class="inline-bee"> Fun Fact:</strong> 3D printing was invented in 1984 - that's probably before your parents were born!
             </div>
 
             <p>3D printing (also called <strong>additive manufacturing</strong>) builds objects layer by layer from the bottom up. It's like building with really thin Lego bricks, but the "bricks" are made of melted plastic!</p>
@@ -101,7 +101,7 @@
             </div>
 
             <button class="ask-tutor-btn" data-question="Explain FDM 3D printing like I'm 10 years old">
-                🐝 Ask LayerBEE to explain more
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="inline-bee"> Ask LayerBEE to explain more
             </button>
         </section>
 
@@ -152,7 +152,7 @@
             </div>
 
             <button class="ask-tutor-btn" data-question="What are the most important parts of a 3D printer to understand?">
-                🐝 Ask LayerBEE about printer parts
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="inline-bee"> Ask LayerBEE about printer parts
             </button>
         </section>
 
@@ -200,7 +200,7 @@
             </div>
 
             <div class="tip-box">
-                <strong>🐝 LayerBEE's Tip:</strong> Start with PLA! It's the easiest to print, doesn't smell bad, and comes in tons of cool colors. You can try other materials once you've got some experience.
+                <strong><img src="../images/LayerBEE-chatbot-logo.png" alt="LayerBEE" class="inline-bee"> LayerBEE's Tip:</strong> Start with PLA! It's the easiest to print, doesn't smell bad, and comes in tons of cool colors. You can try other materials once you've got some experience.
             </div>
 
             <h3>PLA - Your Best Friend</h3>
@@ -215,7 +215,7 @@
             </ul>
 
             <button class="ask-tutor-btn" data-question="What's the difference between PLA and PETG?">
-                🐝 Compare filament types
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="inline-bee"> Compare filament types
             </button>
         </section>
 
@@ -275,7 +275,7 @@
             </div>
 
             <button class="ask-tutor-btn" data-question="My first layer isn't sticking, what should I check?">
-                🐝 Help! My print won't stick
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="inline-bee"> Help! My print won't stick
             </button>
         </section>
 
@@ -377,11 +377,11 @@
             </div>
 
             <div class="tip-box">
-                <strong>🐝 LayerBEE's Tip:</strong> A calibration cube should measure exactly 20mm on each side. If yours is off, you may need to calibrate your printer's steps!
+                <strong><img src="../images/LayerBEE-chatbot-logo.png" alt="LayerBEE" class="inline-bee"> LayerBEE's Tip:</strong> A calibration cube should measure exactly 20mm on each side. If yours is off, you may need to calibrate your printer's steps!
             </div>
 
             <button class="ask-tutor-btn" data-question="How do I slice and print a calibration cube? Walk me through step by step.">
-                🐝 Help me print this!
+                <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="inline-bee"> Help me print this!
             </button>
         </section>
 
