Add school pitch page and fix mobile navigation
- Create school-pitch.html landing page for approaching schools
- Add marketplace section highlighting student entrepreneurship
- Add CSS styles for school pitch with print support
- Fix hamburger menu missing on all module pages
- Add footer link to school pitch from main site

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
     <footer class="site-footer">
         <p>Built for young makers with the <strong>Producer Mindset</strong></p>
         <p class="footer-note">100% free. No data leaves your browser. Built with WebLLM.</p>
+        <p class="footer-link"><a href="school-pitch.html">Want to bring LayerBEE to your school?</a></p>
     </footer>
 
     <script src="js/app.js"></script>
