--- a/modules/shop.html
+++ b/modules/shop.html
@@ -24,6 +24,11 @@
                 <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="logo-img" aria-hidden="true">
                 <span class="logo-text">LayerBEE</span>
             </a>
+            <button class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
             <nav aria-label="Main navigation">
                 <ul class="nav-links">
                     <li><a href="../index.html" class="nav-link">Home</a></li>
