Add full navbar to school pitch page
- Replace simple header with site-wide navigation
- Add hamburger menu for mobile responsiveness
- Add theme toggle (light/dark mode)
- Track Bambu Studio integration decision in BEADS

w4ester & ai orchestration

--- a/school-pitch.html
+++ b/school-pitch.html
@@ -20,11 +20,33 @@
     <!-- Skip link for accessibility -->
     <a href="#main-content" class="skip-link">Skip to main content</a>
 
-    <header class="pitch-header">
-        <a href="index.html" class="logo">
-            <img src="images/LayerBEE-chatbot-logo.png" alt="" class="logo-img" aria-hidden="true">
-            <span class="logo-text">LayerBEE</span>
-        </a>
+    <header class="site-header">
+        <div class="header-content">
+            <a href="index.html" class="logo">
+                <img src="images/LayerBEE-chatbot-logo.png" alt="" class="logo-img" aria-hidden="true">
+                <span class="logo-text">LayerBEE</span>
+            </a>
+            <button class="hamburger" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            <nav aria-label="Main navigation">
+                <ul class="nav-links">
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="index.html#modules" class="nav-link">Learn</a></li>
+                    <li><a href="modules/troubleshoot.html" class="nav-link">Fix Problems</a></li>
+                    <li><a href="modules/business.html" class="nav-link">Start Selling</a></li>
+                    <li><a href="modules/shop.html" class="nav-link">Shop</a></li>
+                </ul>
+            </nav>
+            <div class="header-actions">
+                <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">
+                    <span class="theme-icon-light" aria-hidden="true">☀️</span>
+                    <span class="theme-icon-dark" aria-hidden="true">🌙</span>
+                </button>
+            </div>
+        </div>
     </header>
 
     <main id="main-content">
